tests/snapshots/test_from_file__oss_tests__diet.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ~
problem_sense: Minimize
variables:
  "Apple,Raw,W_Skin": General
  Chocolate_Chip_Cookies: General
  Grapes: General
  Hotdog: General
  Lowfat_Milk: General
  Raisin_Brn: General
  Rgc1: General
  Rgc2: General
  Rgc3: General
  Rgc4: General
  Roasted_Chicken: General
  Spaghetti_W__Sauce: General
  "Tomato,Red,Ripe,Raw": General
objectives:
  - name: obj
    coefficients:
      - var_name: Roasted_Chicken
        coefficient: 0.84
      - var_name: Spaghetti_W__Sauce
        coefficient: 0.78
      - var_name: "Tomato,Red,Ripe,Raw"
        coefficient: 0.27
      - var_name: "Apple,Raw,W_Skin"
        coefficient: 0.24
      - var_name: Grapes
        coefficient: 0.32
      - var_name: Chocolate_Chip_Cookies
        coefficient: 0.03
      - var_name: Lowfat_Milk
        coefficient: 0.23
      - var_name: Raisin_Brn
        coefficient: 0.34
      - var_name: Hotdog
        coefficient: 0.31
constraints:
  "c1:":
    Standard:
      name: "c1:"
      coefficients:
        - var_name: Roasted_Chicken
          coefficient: 277.4
        - var_name: Spaghetti_W__Sauce
          coefficient: 358.2
        - var_name: "Tomato,Red,Ripe,Raw"
          coefficient: 25.8
        - var_name: "Apple,Raw,W_Skin"
          coefficient: 81.4
        - var_name: Grapes
          coefficient: 15.1
        - var_name: Chocolate_Chip_Cookies
          coefficient: 78.1
        - var_name: Lowfat_Milk
          coefficient: 121.2
        - var_name: Raisin_Brn
          coefficient: 115.1
        - var_name: Hotdog
          coefficient: 242.1
        - var_name: Rgc1
          coefficient: -1
      sense: "="
      rhs: 2500
  "c2:":
    Standard:
      name: "c2:"
      coefficients:
        - var_name: Roasted_Chicken
          coefficient: 21.9
        - var_name: Spaghetti_W__Sauce
          coefficient: 80.2
        - var_name: "Tomato,Red,Ripe,Raw"
          coefficient: 6.2
        - var_name: "Apple,Raw,W_Skin"
          coefficient: 9.7
        - var_name: Grapes
          coefficient: 3.4
        - var_name: Chocolate_Chip_Cookies
          coefficient: 6.2
        - var_name: Lowfat_Milk
          coefficient: 296.7
        - var_name: Raisin_Brn
          coefficient: 12.9
        - var_name: Hotdog
          coefficient: 23.5
        - var_name: Rgc2
          coefficient: -1
      sense: "="
      rhs: 1600
  "c3:":
    Standard:
      name: "c3:"
      coefficients:
        - var_name: Roasted_Chicken
          coefficient: 1.8
        - var_name: Spaghetti_W__Sauce
          coefficient: 2.3
        - var_name: "Tomato,Red,Ripe,Raw"
          coefficient: 0.6
        - var_name: "Apple,Raw,W_Skin"
          coefficient: 0.2
        - var_name: Grapes
          coefficient: 0.1
        - var_name: Chocolate_Chip_Cookies
          coefficient: 0.4
        - var_name: Lowfat_Milk
          coefficient: 0.1
        - var_name: Raisin_Brn
          coefficient: 16.8
        - var_name: Hotdog
          coefficient: 2.3
        - var_name: Rgc3
          coefficient: -1
      sense: "="
      rhs: 30
  "c4:":
    Standard:
      name: "c4:"
      coefficients:
        - var_name: Roasted_Chicken
          coefficient: 77.4
        - var_name: Spaghetti_W__Sauce
          coefficient: 3055.2
        - var_name: "Tomato,Red,Ripe,Raw"
          coefficient: 766.3
        - var_name: "Apple,Raw,W_Skin"
          coefficient: 73.1
        - var_name: Grapes
          coefficient: 24
        - var_name: Chocolate_Chip_Cookies
          coefficient: 101.8
        - var_name: Lowfat_Milk
          coefficient: 500.2
        - var_name: Raisin_Brn
          coefficient: 1250.2
        - var_name: Rgc4
          coefficient: -1
      sense: "="
      rhs: 50000
