tests/snapshots/test_from_file__oss_tests__mosek_bounds.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  "dummy_constraint:":
    Standard:
      name: "dummy_constraint:"
      coefficients:
        - coefficient: 1
          var_name: Gen_001d01h01
        - coefficient: 1
          var_name: Gen_001d01h02
        - coefficient: 59.983048643
          var_name: "SO_GB.XYZ's.Dan.(1)"
        - coefficient: -0.2
          var_name: STU_7_AL.rsuT.Wat.Job.(1)
      sense: "<="
      rhs: 1000
objectives:
  - coefficients:
      - coefficient: 0.2
        var_name: Gen_001d01h01
      - coefficient: 0.2
        var_name: Gen_001d01h02
      - coefficient: 0.2
        var_name: Gen_001d01h03
      - coefficient: 0.2
        var_name: Gen_001d01h04
      - coefficient: 0.2
        var_name: Gen_001d01h05
      - coefficient: 0.2
        var_name: Gen_001d01h06
      - coefficient: 0.2
        var_name: Gen_001d01h07
      - coefficient: 0.2
        var_name: Gen_001d01h08
      - coefficient: 0.2
        var_name: Gen_001d01h09
      - coefficient: 0.2
        var_name: Gen_001d01h10
      - coefficient: 0.2
        var_name: Gen_001d01h11
    name: system_cost
problem_name: ~
problem_sense: Minimize
variables:
  EF_0_E_Hub_Albania_Demand_Albania:
    UB: -999999999.9
  EF_1_E_Hub_Albania_Demand_Albania:
    UB: -999999999.9
  Gen_001d01h01: General
  Gen_001d01h02: General
  Gen_001d01h03: General
  Gen_001d01h04: General
  Gen_001d01h05: General
  Gen_001d01h06: General
  Gen_001d01h07: General
  Gen_001d01h08: General
  Gen_001d01h09: General
  Gen_001d01h10: General
  Gen_001d01h11: General
  "SO_GB.XYZ's.Dan.(1)": General
  STU_7_AL.rsuT.Wat.Job.(1): General
