tests/snapshots/test_from_file__oss_tests__obj_2cons_only_binary_vars.snap
---
source: tests/test_from_file.rs
expression: result
---
problem_name: ~
problem_sense: Minimize
variables:
  x: Binary
  y: Binary
  z: Binary
objectives:
  - name: obj1
    coefficients:
      - var_name: x
        coefficient: -0.5
      - var_name: y
        coefficient: -2
      - var_name: z
        coefficient: -8
  - name: obj2
    coefficients:
      - var_name: y
        coefficient: 1
      - var_name: x
        coefficient: 1
      - var_name: z
        coefficient: 1
constraints:
  "cons1:":
    Standard:
      name: "cons1:"
      coefficients:
        - var_name: x
          coefficient: -199
        - var_name: y
          coefficient: 10
        - var_name: z
          coefficient: 1
      sense: "<="
      rhs: 0
  "cons2:":
    Standard:
      name: "cons2:"
      coefficients:
        - var_name: y
          coefficient: 1
        - var_name: z
          coefficient: 1
      sense: ">="
      rhs: 0
