tests/snapshots/test_from_file__oss_tests__output_cplex_2.snap
---
source: tests/test_from_file.rs
expression: result
---
constraints:
  con_2024:
    Standard:
      name: con_2024
      coefficients:
        - coefficient: -1
          var_name: X0
      sense: ">="
      rhs: -5
  con_2025:
    Standard:
      name: con_2025
      coefficients:
        - coefficient: 1
          var_name: X0
      sense: ">="
      rhs: 0
  con_2026:
    Standard:
      name: con_2026
      coefficients:
        - coefficient: -1
          var_name: X0
        - coefficient: -1
          var_name: X3
        - coefficient: -1
          var_name: X6
      sense: ">="
      rhs: -7
  con_2027:
    Standard:
      name: con_2027
      coefficients:
        - coefficient: 1
          var_name: X0
      sense: ">="
      rhs: 0
  con_2028:
    Standard:
      name: con_2028
      coefficients:
        - coefficient: -1
          var_name: X1
      sense: ">="
      rhs: -3
  con_2029:
    Standard:
      name: con_2029
      coefficients:
        - coefficient: 1
          var_name: X1
      sense: ">="
      rhs: 0
  con_2030:
    Standard:
      name: con_2030
      coefficients:
        - coefficient: -1
          var_name: X1
        - coefficient: -1
          var_name: X4
        - coefficient: -1
          var_name: X7
      sense: ">="
      rhs: -3
  con_2031:
    Standard:
      name: con_2031
      coefficients:
        - coefficient: 1
          var_name: X1
      sense: ">="
      rhs: 0
  con_2032:
    Standard:
      name: con_2032
      coefficients:
        - coefficient: -1
          var_name: X1
        - coefficient: -2
          var_name: X4
        - coefficient: -3
          var_name: X0
        - coefficient: -3
          var_name: X7
        - coefficient: -3
          var_name: X8
        - coefficient: -4
          var_name: X3
        - coefficient: -4
          var_name: X5
        - coefficient: -9999
          var_name: X2
        - coefficient: -9999
          var_name: X6
        - coefficient: 1
          var_name: X9
      sense: "="
      rhs: 0
  con_2033:
    Standard:
      name: con_2033
      coefficients:
        - coefficient: -1
          var_name: X2
      sense: ">="
      rhs: -5
  con_2034:
    Standard:
      name: con_2034
      coefficients:
        - coefficient: 1
          var_name: X2
      sense: ">="
      rhs: 0
  con_2035:
    Standard:
      name: con_2035
      coefficients:
        - coefficient: 1
          var_name: X2
        - coefficient: 1
          var_name: X1
        - coefficient: 1
          var_name: X0
      sense: "="
      rhs: 5
  con_2036:
    Standard:
      name: con_2036
      coefficients:
        - coefficient: -1
          var_name: X2
        - coefficient: -1
          var_name: X5
        - coefficient: -1
          var_name: X8
      sense: ">="
      rhs: -5
  con_2037:
    Standard:
      name: con_2037
      coefficients:
        - coefficient: 1
          var_name: X2
      sense: ">="
      rhs: 0
  con_2038:
    Standard:
      name: con_2038
      coefficients:
        - coefficient: -1
          var_name: X3
      sense: ">="
      rhs: -7
  con_2039:
    Standard:
      name: con_2039
      coefficients:
        - coefficient: 1
          var_name: X3
      sense: ">="
      rhs: 0
  con_2040:
    Standard:
      name: con_2040
      coefficients:
        - coefficient: 1
          var_name: X3
      sense: ">="
      rhs: 0
  con_2041:
    Standard:
      name: con_2041
      coefficients:
        - coefficient: -1
          var_name: X4
      sense: ">="
      rhs: -3
  con_2042:
    Standard:
      name: con_2042
      coefficients:
        - coefficient: 1
          var_name: X4
      sense: ">="
      rhs: 0
  con_2043:
    Standard:
      name: con_2043
      coefficients:
        - coefficient: 1
          var_name: X4
      sense: ">="
      rhs: 0
  con_2044:
    Standard:
      name: con_2044
      coefficients:
        - coefficient: -1
          var_name: X5
      sense: ">="
      rhs: -5
  con_2045:
    Standard:
      name: con_2045
      coefficients:
        - coefficient: 1
          var_name: X5
      sense: ">="
      rhs: 0
  con_2046:
    Standard:
      name: con_2046
      coefficients:
        - coefficient: 1
          var_name: X5
        - coefficient: 1
          var_name: X4
        - coefficient: 1
          var_name: X3
      sense: "="
      rhs: 7
  con_2047:
    Standard:
      name: con_2047
      coefficients:
        - coefficient: 1
          var_name: X5
      sense: ">="
      rhs: 0
  con_2048:
    Standard:
      name: con_2048
      coefficients:
        - coefficient: -1
          var_name: X6
      sense: ">="
      rhs: -3
  con_2049:
    Standard:
      name: con_2049
      coefficients:
        - coefficient: 1
          var_name: X6
      sense: ">="
      rhs: 0
  con_2050:
    Standard:
      name: con_2050
      coefficients:
        - coefficient: 1
          var_name: X6
      sense: ">="
      rhs: 0
  con_2051:
    Standard:
      name: con_2051
      coefficients:
        - coefficient: -1
          var_name: X7
      sense: ">="
      rhs: -3
  con_2052:
    Standard:
      name: con_2052
      coefficients:
        - coefficient: 1
          var_name: X7
      sense: ">="
      rhs: 0
  con_2053:
    Standard:
      name: con_2053
      coefficients:
        - coefficient: 1
          var_name: X7
      sense: ">="
      rhs: 0
  con_2054:
    Standard:
      name: con_2054
      coefficients:
        - coefficient: -1
          var_name: X8
      sense: ">="
      rhs: -3
  con_2055:
    Standard:
      name: con_2055
      coefficients:
        - coefficient: 1
          var_name: X8
      sense: ">="
      rhs: 0
  con_2056:
    Standard:
      name: con_2056
      coefficients:
        - coefficient: 1
          var_name: X8
        - coefficient: 1
          var_name: X7
        - coefficient: 1
          var_name: X6
      sense: "="
      rhs: 3
  con_2057:
    Standard:
      name: con_2057
      coefficients:
        - coefficient: 1
          var_name: X8
      sense: ">="
      rhs: 0
  con_2058:
    Standard:
      name: con_2058
      coefficients:
        - coefficient: -1
          var_name: X9
      sense: ">="
      rhs: -80082
  con_2059:
    Standard:
      name: con_2059
      coefficients:
        - coefficient: 1
          var_name: X9
      sense: ">="
      rhs: 0
objectives:
  - coefficients:
      - coefficient: 1
        var_name: X9
    name: obj
problem_name: ~
problem_sense: Minimize
variables:
  X0: Integer
  X1: Integer
  X2: Integer
  X3: Integer
  X4: Integer
  X5: Integer
  X6: Integer
  X7: Integer
  X8: Integer
  X9: Integer
